@@ -1,0 +1,10 @@
+prefix=@prefix@
+exec_prefix=${prefix}
+libdir=${prefix}/lib
+includedir=${prefix}/include
+
+Name: slang 
+Description: S-Lang programming library and interpreter
+Version: @slang_version@
+Libs: -L${libdir} -lslang
+Cflags: -I${includedir}
