@@ -12,6 +12,8 @@ Changes since 2.2.0
 6. src/slmath.c: The expm1 and log1p functions were returning NaN when
    given Inf arguments.
 7. src/slmath,c: log1p(-1) produced nan instead of -inf.
+8. configure: Added pkg-config support (based upon a debian patch sent
+   to me by Luca Bigliardi).
 
 {{{ Previous Versions
 
